Fixing incorrect css rule for tab spacing

--- a/app/assets/stylesheets/all/frasernw.css.scss
+++ b/app/assets/stylesheets/all/frasernw.css.scss
@@ -415,11 +415,9 @@ body
     
     .tabbable
     {
-      margin: 10px 0;
-      
       ul.nav-tabs
       {
-        margin: 0;
+        margin: 10px 0;
         border-color: $FNW_MID_GRAY;
         
         li
